--- a/components/Button/Button.module.scss
+++ b/components/Button/Button.module.scss
@@ -1,7 +1,13 @@
-@import "@common/variables.scss";
-@import "@common/colors.scss";
+@import '@common/variables.scss';
+@import '@common/colors.scss';
 
-.container {
-
+.button {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px 20px;
+  border-radius: 10px;
+  background-color: $base-black;
+  color: $base-white;
 }
-
