--- a/styles/common/colors.scss
+++ b/styles/common/colors.scss
@@ -1,11 +1,23 @@
 // BASE COLORS
 $base-white: #fff;
 $base-black: #000;
+$base-gray: #333;
 
 // SECONDARY COLORS
 
 // ADDITIONAL COLORS
 
+$additional-black-almost: #222;
+$additional-gray: #808080;
+$additional-gray-dark: #404040;
+$additional-gray-middle: #e0e0e0;
+$additional-gray-pre-middle: #bdbdbd;
+$additional-gray-light: #f2f2f2;
+
 //BG COLORS
 
+$bg-gray: #eee;
+
 // TEXT COLORS
+
+$text-gray: #828282;
