--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,28 +1,12 @@
+/* styles/globals.css */
+
 @import './common/colors.scss';
 @import './common/mixins.scss';
 @import './common/typo.scss';
-@import './modules/ProductImageCarousel/ProductImageCarousel.module';
-@import './modules/CustomSelect/CustomSelect.module';
-@import '../packages/react-dadata/react-dadata.module';
-@import 'react-toastify/dist/ReactToastify.css';
-@import 'react-tooltip/dist/react-tooltip.css';
+@import './reset.scss'; /* Убедитесь, что сброс стилей импортирован первым */
 
 :root {
   --app-height: 100%;
-}
-
-body,
-html {
-  width: 100vw;
-  height: var(--app-height);
-  margin: 0;
-  padding: 0;
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
 }
 
 * {
@@ -31,8 +15,19 @@ html {
   -webkit-tap-highlight-color: rgb(0 0 0 / 0%);
 }
 
+body,
+html {
+  width: 100vw;
+  height: var(--app-height);
+  font-family: var(--font-family-base);
+  background: $additional-gray-background;
+
+  > * {
+    font-family: var(--font-family-base);
+  }
+}
+
 ul {
-  margin: 0;
   padding: 0;
   list-style: none;
 }
@@ -40,76 +35,21 @@ ul {
 button,
 input[type='submit'],
 input[type='reset'] {
-  padding: 0;
   font: inherit;
   color: inherit;
-  background: none;
-  border: none;
   outline: inherit;
-  cursor: pointer;
 }
 
 a {
   color: inherit;
-  text-decoration: none;
-}
-
-p {
-  margin: 0;
 }
 
 table {
   border-collapse: collapse;
-  border-spacing: 0;
 }
 
-th,
-td {
-  padding: 0;
-  text-align: left;
-}
-
-img,
-svg {
-  display: block;
-  max-width: 100%;
-  height: auto;
-}
-
-fieldset {
-  margin: 0;
-  padding: 0;
-  border: 0;
-}
-
-legend {
-  display: table;
-  max-width: 100%;
-  white-space: normal;
-}
-
-input,
-textarea,
-select,
-button {
-  font-size: inherit;
-  line-height: inherit;
-  font-family: inherit;
-}
-
-textarea {
-  resize: vertical;
-}
-
-blockquote,
-q {
-  quotes: none;
-}
-
-blockquote::before,
-blockquote::after,
-q::before,
-q::after {
-  content: '';
-  content: none;
+.TabsList {
+  display: flex;
+  flex-shrink: 0;
+  border-bottom: 1px solid $base-gray;
 }
