--- a/styles/common/variables.scss
+++ b/styles/common/variables.scss
@@ -6,5 +6,6 @@ $s: 8px; // Small
 $sm: 12px; // Small medium
 $m: 16px; // Medium
 $l: 20px; // Large
+$lg: 24px; // Large
 $xl: 32px; // Extra large
 $xxl: 48px; // Extra extra large
