--- a/components/Button/Button.module.scss
+++ b/components/Button/Button.module.scss
@@ -8,11 +8,11 @@
   width: 100%;
   height: 36px;
   padding: 10px $m;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 14px;
   line-height: normal;
+  font-family: inherit;
   color: $base-white;
-  font-style: normal;
   border: none;
   border-radius: $xxs;
   cursor: pointer;
@@ -20,6 +20,19 @@
 
   &.primary {
     background-color: $base-gray;
+
+    &.icon {
+      justify-content: center;
+      width: $xxl;
+      height: $xxl;
+      padding: $lg;
+      border-radius: $xxs;
+
+      svg {
+        width: 24px;
+        height: 24px;
+      }
+    }
 
     &:disabled {
       background-color: $additional-gray-pre-middle;
