--- a/styles/common/colors.scss
+++ b/styles/common/colors.scss
@@ -13,6 +13,7 @@ $additional-gray-dark: #404040;
 $additional-gray-middle: #e0e0e0;
 $additional-gray-pre-middle: #bdbdbd;
 $additional-gray-light: #f2f2f2;
+$additional-error: #c10015;
 $additional-gray-background: #f5f5f5;
 
 //BG COLORS
