--- a/components/Tabs/components/Tab/Tab.module.scss
+++ b/components/Tabs/components/Tab/Tab.module.scss
@@ -3,22 +3,36 @@
 @import '@common/typo.scss';
 
 .container {
-  padding: 10px 20px;
+  padding: 8px 16px;
+  border-radius: 100px;
   cursor: pointer;
+  transition: all 0.3s ease;
 
   &:hover {
-    border-bottom: 2px solid $base-black;
+    background-color: $additional-gray-middle;
   }
 }
 
 .active {
+  padding: 8px 16px;
   font-weight: bold;
   color: $base-black;
-  border-bottom: 2px solid $base-black;
+  background-color: $additional-gray-middle;
+  border-radius: 100px;
 }
 
 .label {
   text-transform: capitalize;
 
   @include font-m-flat;
+}
+
+.bage {
+  position: relative;
+  top: -1px;
+  left: 4px;
+  font-weight: 700;
+  color: $additional-gray-medium;
+
+  @include font-s-flat;
 }
