--- a/styles/common/colors.scss
+++ b/styles/common/colors.scss
@@ -15,11 +15,10 @@ $additional-gray-pre-middle: #bdbdbd;
 $additional-gray-light: #f2f2f2;
 $additional-error: #c10015;
 $additional-gray-background: #f5f5f5;
+$additional-gray-medium: #828282;
 
 //BG COLORS
 
 $bg-gray: #eee;
 
 // TEXT COLORS
-
-$text-gray: #828282;
