Сreate offer page, updated select with popup, created add a custom token

--- a/components/Input/Input.module.scss
+++ b/components/Input/Input.module.scss
@@ -2,14 +2,36 @@
 @import '@common/colors.scss';
 @import '@common/typo.scss';
 
+@mixin input-label {
+  font-weight: 600;
+  font-size: 14px;
+}
+
 .wrapper {
-  max-width: 100%;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: $s;
+}
+
+.label {
+  color: $base-black;
+
+  @include input-label;
+}
+
+.errorLabel {
+  color: $additional-error;
+
+  @include input-label;
 }
 
 .input {
+  --text-field-border-width: 0px;
+
   width: 100%;
   height: $xxl;
-  padding-left: $s;
+  padding: 0 $s;
   font-weight: 400;
   font-size: 24px;
   line-height: $xxl;
@@ -82,6 +104,8 @@
 
 .lg {
   height: 48px;
+  border: 1px solid $base-black;
+  border-radius: $s !important;
 
   @include font-3xl;
 }
