--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -17,7 +17,7 @@
 
 body,
 html {
-  width: 100vw;
+  width: 100%;
   height: var(--app-height);
   font-family: var(--font-family-base);
   background: $additional-gray-background;
