--- a/components/Sidebar/Sidebar.module.scss
+++ b/components/Sidebar/Sidebar.module.scss
@@ -10,20 +10,32 @@
 .sidebar {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   align-items: flex-start;
-  min-width: 164px;
-  max-width: 164px;
-  height: 100vh;
-  padding: 48px 0 0;
-  background: $base-white;
-  gap: 24px;
+  min-width: 178px;
+  max-width: 178px;
+  padding: 48px 0 16px;
+  background: $bg-gray;
+  border-right: 1px solid $additional-gray-pre-middle;
+}
+
+.navigation {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 48px;
 }
 
 .buttonContainer {
   display: flex;
   align-items: center;
   gap: 8px;
-  padding: 0 24px;
+  padding: 0 16px;
+}
+
+.button {
+  max-width: 48px;
+  min-height: 48px;
 }
 
 .button,
@@ -48,9 +60,16 @@
   color: $base-black;
 }
 
+.rightsLabel {
+  padding-left: 16px;
+  font-weight: 400;
+  font-size: 11px;
+  color: $additional-gray-medium;
+}
+
 .content {
   width: 100%;
-  height: 100vh;
+  min-height: calc(100vh - 48px);
   margin-top: 48px;
   background: $additional-gray-background;
 }
