--- a/styles/common/colors.scss
+++ b/styles/common/colors.scss
@@ -16,6 +16,7 @@ $additional-gray-light: #f2f2f2;
 $additional-error: #c10015;
 $additional-gray-background: #f5f5f5;
 $additional-gray-medium: #828282;
+$additional-warn: #ffe8e8;
 
 //BG COLORS
 
