--- a/styles/common/mixins.scss
+++ b/styles/common/mixins.scss
@@ -1,1 +1,13 @@
-//empty
+@mixin popup-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background: rgb(0 0 0 / 25%);
+}
