--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,7 +3,8 @@
 @import './common/colors.scss';
 @import './common/mixins.scss';
 @import './common/typo.scss';
-@import './reset.scss'; /* Убедитесь, что сброс стилей импортирован первым */
+@import './common/variables.scss';
+@import './reset.scss';
 
 :root {
   --app-height: 100%;
@@ -12,7 +13,7 @@
 * {
   -webkit-touch-callout: default;
   -webkit-text-size-adjust: none;
-  -webkit-tap-highlight-color: rgb(0 0 0 / 0%);
+  -webkit-tap-highlight-color: red;
 }
 
 body,
@@ -46,4 +47,9 @@ a {
 
 table {
   border-collapse: collapse;
+}
+
+.rt-TextFieldRoot:where(.rt-r-size-2) :where(.rt-TextFieldInput) {
+  --text-field-selection-color: color(display-p3 0.004 0.235 1/0.169);
+  padding: 0 $s;
 }
