--- a/styles/common/colors.scss
+++ b/styles/common/colors.scss
@@ -14,6 +14,7 @@ $additional-gray-middle: #e0e0e0;
 $additional-gray-pre-middle: #bdbdbd;
 $additional-gray-light: #f2f2f2;
 $additional-error: #c10015;
+$additional-success: #1AAB9B;
 $additional-gray-background: #f5f5f5;
 $additional-gray-medium: #828282;
 $additional-warn: #ffe8e8;
