--- a/components/PopupToast/PopupToast.module.scss
+++ b/components/PopupToast/PopupToast.module.scss
@@ -14,7 +14,9 @@
   flex-direction: column;
   align-items: center;
   gap: $sm;
-  transition: top 0.5s ease, opacity 0.5s ease;
+  transition:
+    top 0.5s ease,
+    opacity 0.5s ease;
 }
 
 .item {
