--- a/components/Input/Input.module.scss
+++ b/components/Input/Input.module.scss
@@ -31,6 +31,7 @@
 
   width: 100%;
   height: $xxl;
+  padding: 0 $s;
   font-weight: 400;
   font-size: 24px;
   line-height: $xxl;
@@ -39,12 +40,6 @@
   border: 1px solid $base-gray;
   border-radius: $xxs;
   outline: none;
-  transition: all 200ms ease-in-out;
-
-  &:disabled {
-    color: $additional-gray-pre-middle;
-    border: 1px solid $additional-gray-pre-middle;
-  }
 
   & svg {
     margin-right: 6px;
@@ -55,18 +50,28 @@
   }
 
   &:focus-within {
+    padding: 0 7px;
     color: $base-black;
-    border: 1px solid $base-black;
+    border: 2px solid $base-black;
   }
 
-  &:not(.errorInput, :focus-within, :disabled):hover {
+  &.disabledInput {
+    color: $additional-gray-pre-middle;
+    background: $base-white;
+    border: 1px solid $additional-gray-pre-middle;
+    cursor: not-allowed;
+  }
+
+  &:not(.errorInput, :focus-within, .disabledInput):hover {
     color: $base-black;
     border: 1px solid $base-black;
+    transition: all 200ms ease-in-out;
   }
 
   &.errorInput {
+    padding: 0 7px;
     color: $additional-error;
-    border: 1px solid $additional-error;
+    border: 2px solid $additional-error;
   }
 }
 
