--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -48,3 +48,7 @@ a {
 table {
   border-collapse: collapse;
 }
+
+.rt-TextFieldRoot:where(.rt-r-size-2) :where(.rt-TextFieldInput) {
+  --text-field-selection-color: color(display-p3 0.004 0.235 1/0.169);
+}
