Fix error messages output, increase popup duration by 2 seconds. Prevent approval of more tokens than available balance. Implement token import that adds directly to select. Add allowance to avoid re-approving tokens. Implement offer link creation and copying.

--- a/components/Search/Search.module.scss
+++ b/components/Search/Search.module.scss
@@ -20,7 +20,8 @@
 
 .errorInput {
   color: $additional-error !important;
-  border: 1px solid $additional-error !important;
+  border: 2px solid $additional-error !important;
+  padding: 0 7px !important;
 }
 
 [data-theme='dark'] .errorInput {
@@ -28,6 +29,8 @@
 }
 
 .input {
+  --text-field-border-width: 0px;
+
   width: 100%;
   height: 36px;
   padding: 0 $s;
@@ -37,10 +40,10 @@
   color: $base-black;
   border: 1px solid $base-gray;
   border-radius: $xxs;
-  transition: all 200ms ease-in-out;
 
   &:focus-within {
-    border: 1px solid $base-black;
+    border: 2px solid $base-black;
+    padding: 0 7px;
   }
 
   &:disabled {
@@ -56,6 +59,7 @@
   &:not(.errorInput, :disabled, :focus-within):hover {
     color: $base-black;
     border: 1px solid $base-black;
+    transition: all 200ms ease-in-out;
   }
 }
 
