closing modal on click outside, fixed token import, loading button label

--- a/components/Sidebar/Sidebar.module.scss
+++ b/components/Sidebar/Sidebar.module.scss
@@ -34,7 +34,13 @@
 }
 
 .button {
-  max-width: 48px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: $xxs;
+  background: $base-gray;
+
+  min-width: 48px;
   min-height: 48px;
 }
 
