--- a/components/Button/Button.module.scss
+++ b/components/Button/Button.module.scss
@@ -35,6 +35,7 @@
 
     &:disabled {
       background-color: $additional-gray-pre-middle;
+      cursor: not-allowed;
     }
 
     &:not(:disabled):hover {
@@ -58,7 +59,7 @@
 
 @keyframes l {
   to {
-    clip-path: inset(0 -1ch 0 0)
+    clip-path: inset(0 -1ch 0 0);
   }
 }
 
@@ -72,6 +73,7 @@
       &:disabled {
         color: $base-white;
         background-color: $additional-black-almost;
+        cursor: not-allowed;
       }
 
       &:not(:disabled):hover {
