--- a/components/Input/Input.module.scss
+++ b/components/Input/Input.module.scss
@@ -59,6 +59,7 @@
     color: $additional-gray-pre-middle;
     background: $base-white;
     border: 1px solid $additional-gray-pre-middle;
+    cursor: not-allowed;
   }
 
   &:not(.errorInput, :focus-within, .disabledInput):hover {
