--- a/components/CreateOffer/Bottom/OfferBottom.module.scss
+++ b/components/CreateOffer/Bottom/OfferBottom.module.scss
@@ -10,6 +10,9 @@
   padding: $m $lg;
   background: $base-white;
   gap: $m;
+
+  border-bottom-right-radius: $s;
+  border-bottom-left-radius: $s;
 }
 
 .label {
