--- a/components/Tabs/components/TabItem/TabItem.module.scss
+++ b/components/Tabs/components/TabItem/TabItem.module.scss
@@ -12,7 +12,7 @@
     background-color: $additional-gray-middle;
   }
 
-  &[data-state="active"] {
+  &[data-state='active'] {
     font-weight: bold;
     color: $base-black;
     background-color: $additional-gray-middle;
