--- a/components/AcceptedOffer/AcceptedOffer.module.scss
+++ b/components/AcceptedOffer/AcceptedOffer.module.scss
@@ -48,4 +48,17 @@
 
 .button {
   max-width: 144px;
+  width: 100%;
+  display: flex;
+  height: 36px;
+  padding: 0 $m;
+  justify-content: center;
+  align-items: center;
+
+  font-size: 14px;
+  color: $base-white;
+  font-weight: 600;
+
+  border-radius: $xxs;
+  background: $base-gray;
 }
