--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -5,8 +5,8 @@
   display: flex;
   align-items: center;
   width: 100%;
-  height: $header-height;
-  padding: $m $m 0 0;
+  height: 52px;
+  padding: 16px 16px 0 0;
 }
 
 .container {
@@ -15,5 +15,5 @@
   justify-content: flex-end;
   align-items: center;
   width: 100%;
-  gap: $m;
+  gap: 16px;
 }
