--- a/components/MenuTab/MenuTab.module.scss
+++ b/components/MenuTab/MenuTab.module.scss
@@ -5,7 +5,7 @@
 .container {
   display: flex;
   align-items: center;
-  padding: 16px;
+  padding: 12px 16px;
   background-color: transparent;
   cursor: pointer;
   transition: background-color 0.3s;
@@ -26,6 +26,8 @@
 }
 
 .icon {
+  display: flex;
+  align-items: center;
   width: 24px;
   height: 24px;
   margin-right: 8px;
