--- a/components/NotConnectedMessage/NotConnectedMessage.module.scss
+++ b/components/NotConnectedMessage/NotConnectedMessage.module.scss
@@ -1,22 +1,15 @@
-@import '@common/variables.scss';
 @import '@common/colors.scss';
+@import '@common/variables.scss';
 @import '@common/typo.scss';
 
 .container {
   display: grid;
-  grid-auto-rows: max-content;
   justify-items: center;
   row-gap: $lg;
-  margin: $xl 0 0;
-  padding: $xxl 0;
-}
-
-.title {
+  margin-top: 24px;
+  padding: $xxl $lg 0;
   color: $base-black;
+  border-top: 1px solid $additional-gray-pre-middle;
 
   @include font-3xl;
-}
-
-.create {
-  width: max-content;
 }
