--- a/components/Offers/OffersTemplate.module.scss
+++ b/components/Offers/OffersTemplate.module.scss
@@ -4,10 +4,11 @@
 
 .container {
   display: grid;
+  grid-template-rows: max-content;
 }
 
 .header {
-  padding: 0 32px;
+  padding: 0 $xl;
 }
 
 .title {
@@ -17,14 +18,14 @@
 }
 
 .filters {
-  padding: 16px 0 4px;
+  padding: $m 0 0;
 }
 
 .actions {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 16px 0;
+  padding: $m 0;
 
   &__left {
     display: flex;
