--- a/app/offers/[id]/AcceptOffer.module.scss
+++ b/app/offers/[id]/AcceptOffer.module.scss
@@ -7,6 +7,7 @@
   align-items: flex-start;
   width: 100%;
   max-width: 600px;
+  height: max-content;
   margin: 88px auto 0;
   background: $base-white;
   border-radius: $s;
