--- a/components/CreateOffer/From/OfferFrom.module.scss
+++ b/components/CreateOffer/From/OfferFrom.module.scss
@@ -27,5 +27,9 @@
 }
 
 .inputWrapper {
-  max-width: 170px;
+  max-width: 170px !important;
+}
+
+.receiverInput {
+  font-size: 18px !important;
 }
