feat: Subgraph integration

--- a/components/Offers/components/OffersTable/components/OffersTableCell.module.scss
+++ b/components/Offers/components/OffersTable/components/OffersTableCell.module.scss
@@ -1,15 +1,14 @@
 .cell {
   display: inline-flex;
   align-items: center;
+  column-gap: 8px;
 
-  &_align_start {
-    justify-content: start;
-    width: max-content;
+  &_full {
+    width: 100%;
   }
 
-  &_align_end {
-    justify-content: end;
-    width: 100%;
+  &_uppercase {
+    text-transform: uppercase;
   }
 }
 
@@ -17,6 +16,9 @@
   margin-left: 4px;
 }
 
-.address {
-  margin-right: 4px;
+.controls {
+  display: inline-flex;
+  align-items: center;
+  margin-left: auto;
+  column-gap: 8px;
 }
