--- a/components/Button/Button.module.scss
+++ b/components/Button/Button.module.scss
@@ -17,6 +17,10 @@
   border-radius: $xxs;
   cursor: pointer;
 
+  &[data-disabled='true'] {
+    pointer-events: none;
+  }
+
   &.primary {
     background-color: $base-gray;
 
@@ -33,11 +37,13 @@
       }
     }
 
+    &[data-disabled='true'],
     &:disabled {
       background-color: $additional-gray-pre-middle;
-      cursor: not-allowed;
+      cursor: default;
     }
 
+    &:not[data-disabled='true']:hover,
     &:not(:disabled):hover {
       background-color: $base-black;
       transition: all 200ms ease-in-out;
@@ -70,12 +76,14 @@
     &.primary {
       background-color: $bg-gray;
 
+      &[data-disabled='true'],
       &:disabled {
         color: $base-white;
         background-color: $additional-black-almost;
         cursor: not-allowed;
       }
 
+      &:not[data-disabled='true']:hover,
       &:not(:disabled):hover {
         background-color: $base-white;
         transition: all 200ms ease-in-out;
