--- a/components/CreateOffer/From/OfferFrom.module.scss
+++ b/components/CreateOffer/From/OfferFrom.module.scss
@@ -27,9 +27,9 @@
 }
 
 .inputWrapper {
-  max-width: 170px !important;
+  max-width: 170px;
 }
 
 .receiverInput {
-  font-size: 18px !important;
+  font-size: 18px;
 }
