returned important to classnames

--- a/components/CreateOffer/From/OfferFrom.module.scss
+++ b/components/CreateOffer/From/OfferFrom.module.scss
@@ -31,9 +31,9 @@
 }
 
 .inputWrapper {
-  max-width: 170px;
+  max-width: 170px !important;
 }
 
 .receiverInput {
-  font-size: 18px;
+  font-size: 18px !important;
 }
