--- a/components/CreateOffer/Buttons/OfferButtons.module.scss
+++ b/components/CreateOffer/Buttons/OfferButtons.module.scss
@@ -7,7 +7,7 @@
   flex-direction: column;
   align-items: flex-start;
   width: 100%;
-  padding: $m $lg;
+  padding: $m;
   background: $base-white;
   gap: $m;
   border-bottom-right-radius: $s;
