--- a/components/MenuTab/MenuTab.module.scss
+++ b/components/MenuTab/MenuTab.module.scss
@@ -11,7 +11,7 @@
   transition: background-color 0.3s;
 
   &:hover {
-    background-color: $bg-gray;
+    background-color: $additional-gray-middle;
   }
 
   &:active {
@@ -41,5 +41,5 @@
 
 .active {
   font-weight: 600;
-  background-color: $bg-gray;
+  background-color: $additional-gray-middle;
 }
