refactored create offer flow with pixel perfect.

--- a/components/AddTokenPopup/AddTokenPopup.module.scss
+++ b/components/AddTokenPopup/AddTokenPopup.module.scss
@@ -65,8 +65,8 @@
 
 .warnText {
   color: $base-black;
-
-  @include font-m-flat;
+  font-size: 14px;
+  line-height: normal;
 }
 
 .buttonContainer {
