--- a/app/offer/create/CreateOffer.module.scss
+++ b/app/offer/create/CreateOffer.module.scss
@@ -4,15 +4,20 @@
 .container {
   display: flex;
   flex-direction: column;
-  max-width: 736px;
+  max-width: 724px;
   width: 100%;
-  margin: 0 auto;
+  margin: 18px auto 0;
   gap: $lg;
+}
+
+.created {
+  max-width: 760px;
 }
 
 .title {
   font-weight: 400;
   font-size: 24px;
+  line-height: normal;
 }
 
 .fromWrapper {
