--- a/components/ConnectWallet/ConnectWallet.module.scss
+++ b/components/ConnectWallet/ConnectWallet.module.scss
@@ -20,6 +20,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  line-height: normal;
   gap: $xxs;
 }
 
@@ -33,6 +34,7 @@
   display: flex;
   align-items: center;
   padding: $xxs $s;
+  line-height: normal;
   background: $bg-gray;
   border-radius: $xxs;
   gap: $s;
