--- a/app/share/[id]/Share.module.scss
+++ b/app/share/[id]/Share.module.scss
@@ -4,9 +4,9 @@
 .container {
   display: flex;
   flex-direction: column;
-  max-width: 724px;
+  max-width: 760px;
   width: 100%;
-  margin: 0 auto;
+  margin: 18px auto 0;
   gap: $lg;
 }
 
