--- a/components/CreateOffer/From/OfferFrom.module.scss
+++ b/components/CreateOffer/From/OfferFrom.module.scss
@@ -27,6 +27,10 @@
   color: $base-black;
 }
 
+.mb {
+  margin-bottom: 28px;
+}
+
 .inputWrapper {
   max-width: 170px !important;
 }
@@ -70,6 +74,7 @@
 
 .balanceLabel {
   font-size: 12px;
+  line-height: normal;
   color: $base-black;
   font-weight: 600;
 }
