add token popup pixel perfect

--- a/components/AddTokenPopup/AddTokenPopup.module.scss
+++ b/components/AddTokenPopup/AddTokenPopup.module.scss
@@ -10,12 +10,19 @@
 .container {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   width: 100%;
   max-width: 540px;
-  padding: $m $lg;
+  min-height: 548px;
   background: $base-white;
+  padding: $m $lg;
   border: none;
   border-radius: $s;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
   gap: $lg;
 }
 
