inputs equal gap

--- a/components/CreateOffer/From/OfferFrom.module.scss
+++ b/components/CreateOffer/From/OfferFrom.module.scss
@@ -27,8 +27,12 @@
   color: $base-black;
 }
 
+.gap {
+  gap: 16px;
+}
+
 .mb {
-  margin-bottom: 28px;
+  margin-bottom: 22px;
 }
 
 .inputWrapper {
