--- a/src/shared/ui-kit/Table/Table.module.scss
+++ b/src/shared/ui-kit/Table/Table.module.scss
@@ -53,7 +53,7 @@
   display: inline-flex;
   align-items: center;
 
-  * {
+  > * {
     font-weight: inherit;
     font-size: inherit;
     line-height: inherit;
