--- a/src/styles/common/mixins.scss
+++ b/src/styles/common/mixins.scss
@@ -11,3 +11,9 @@
   overflow: auto;
   background: rgb(0 0 0 / 25%);
 }
+
+@mixin supports-hover {
+  @media not all and (hover: none) {
+    @content;
+  }
+}
