--- a/src/modules/OffersTemplate/OffersTemplate.module.scss
+++ b/src/modules/OffersTemplate/OffersTemplate.module.scss
@@ -1,41 +1,88 @@
 @import '@common/variables.scss';
 @import '@common/colors.scss';
 @import '@common/typo.scss';
+@import '@common/breakpoints.scss';
 
 .container {
   display: grid;
   grid-template-rows: max-content;
+  padding-top: $sm;
 }
 
 .header {
-  padding: 0 $xl;
+  @include mobile-up {
+    padding: 0 $xl;
+  }
+
+  @include mobile-down {
+    display: grid;
+    gap: $sm;
+    padding: 0 $m;
+    border-bottom: 1px solid $additional-gray-pre-middle;
+  }
 }
 
 .title {
   color: $base-black;
 
-  @include font-3xl;
+  @include mobile-up {
+    @include font-3xl;
+  }
+
+  @include mobile-down {
+    @include font-xl;
+  }
 }
 
 .filters {
-  padding: $m 0 0;
+  @include mobile-up {
+    padding: $m 0;
+  }
+
+  @include mobile-down {
+    padding: $xs 0;
+  }
 }
 
 .actions {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  padding: $m 0;
+  column-gap: $m;
+
+  @include mobile-up {
+    align-items: center;
+    padding: $m 0;
+  }
+
+  @include mobile-down {
+    flex-direction: column;
+    padding: $sm 0 $m;
+  }
 
   &__left {
-    display: flex;
+    display: grid;
     align-items: center;
-    width: max-content;
-    column-gap: 16px;
+    column-gap: $m;
+
+    @include mobile-up {
+      grid-template-columns: max-content 210px;
+    }
+
+    @include mobile-down {
+      grid-template-columns: max-content 1fr;
+      padding: $xs 0;
+
+      > *:nth-child(2) {
+        max-width: 210px;
+      }
+    }
   }
 
   &__right {
-    padding-right: 42px;
+    @include mobile-down {
+      align-self: center;
+      margin: 0 auto;
+    }
   }
 }
 
