--- a/src/shared/components/ConnectWallet/ConnectWallet.module.scss
+++ b/src/shared/components/ConnectWallet/ConnectWallet.module.scss
@@ -1,5 +1,7 @@
 @import '@common/colors.scss';
 @import '@common/variables.scss';
+@import '@common/breakpoints.scss';
+@import '@common/typo.scss';
 
 .button {
   max-width: 138px;
@@ -9,11 +11,24 @@
   display: flex;
   align-items: center;
   height: 36px;
-  padding: $xxs;
-  background: $base-white;
-  border: 1px solid $bg-gray;
   border-radius: $xxs;
-  gap: $m;
+
+  @include mobile-up {
+    padding: $xxs;
+    gap: $m;
+    background: $base-white;
+    border: 1px solid $bg-gray;
+
+    @include font-l;
+  }
+
+  @include mobile-down {
+    gap: $sm;
+    padding: $xs $m;
+    background: $bg-gray;
+
+    @include font-m;
+  }
 }
 
 .infoContainer {
@@ -25,19 +40,28 @@
 }
 
 .accountIcon {
-  width: 20px;
-  height: 20px;
-  border-radius: 999px;
+  @include mobile-up {
+    width: 20px;
+    height: 20px;
+    border-radius: 999px;
+  }
+
+  @include mobile-down {
+    display: none;
+  }
 }
 
 .accountContainer {
   display: flex;
   align-items: center;
-  padding: $xxs $s;
   line-height: normal;
-  background: $bg-gray;
-  border-radius: $xxs;
-  gap: $s;
+
+  @include mobile-up {
+    padding: $xxs $s;
+    background: $bg-gray;
+    border-radius: $xxs;
+    gap: $s;
+  }
 }
 
 .flex {
@@ -48,4 +72,10 @@
   font-weight: 400;
   font-size: 14px;
   color: $base-black;
+}
+
+.balance {
+  @include mobile-down {
+    display: none;
+  }
 }
